# normalmapping_glut_cpp

./: CMakeLists.txt  normal_map.cpp  normal_map.frag  normal_map.vert  textfile.cpp  textfile.h
